--- a/.eslintrc
+++ b/.eslintrc
@@ -83,7 +83,9 @@
     "jsx-a11y/no-autofocus": "warn",
     "max-classes-per-file": "warn",
     "react/jsx-props-no-spreading": ["off"],
-    "camelcase": "off"
+    "camelcase": "off",
+    "default-param-last": 0,
+     "no-param-reassign": 0
 
   }
 }
