--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
         "history": "^4.10.1",
+        "mongoose": "^6.4.4",
         "nanoid": "^4.0.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
